--- a/index.html
+++ b/index.html
@@ -407,14 +407,14 @@
                 <div class="contact-item">
                     <div class="contact-icon">📞</div>
                     <h3>Телефон</h3>
-                    <p>+380 (44) 123-45-67</p>
+                    <p>+380 (97) 426-13-73</p>
                     <p>+380 (67) 890-12-34</p>
                 </div>
                 
                 <div class="contact-item">
                     <div class="contact-icon">📧</div>
                     <h3>Email</h3>
-                    <p>info@agrologistics.ua</p>
+                    <p>mishazmerz@gmail.com</p>
                     <p>orders@agrologistics.ua</p>
                 </div>
                 
